--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>わたあめ</title>
+    <title>watawata14341 website</title>
+    <link href="basic.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    なんか書くよん。
+        <header>
+                <h1>watawata14341</h1>
+        </header>
+        なんか書くよん。
   </body>
 </html>
