--- a/index.html
+++ b/index.html
@@ -26,30 +26,37 @@
     </div>
   
     <header class="main">
-      <h1>Wataame</h1>
+      <h1>Wataame website</h1>
     </header>
     <div class="main div-left-b">
       <p>Profile</p>
     </div>
     <div class="main div-right-w">
       <p>
-        <u>山梨大学4年      <br>
-        コンピュータ理工学科　<br>
-        趣味：映画鑑賞、ゲーム<br>
-        好きな食べ物：ラーメン</u><br>
+        山梨大学工学部<br>
+        コンピュータ理工学科４年<br>
+        綿貫　彬彦<br>
       </p>
     </div>
     <br>
     <div class="main div-left-w">
-        <p>
-          <u>競技プログラミング頑張る</u><br>
-        </p>
+      <p>
+        映画鑑賞、ゲーム、旅行
+      </p>
     </div>
     <div class="main div-right-b">
+      <p>Hobby</p>
+    </div>
+    <br>
+    <div class="main div-left-b">
+      <p>Ambition</p>
+    </div>
+    <div class="main div-right-w">
         <p>
-            Ambition
+          競技プログラミング頑張る<br>
         </p>
     </div>
+    <br>
 
     <div class="main icons">
         <a href="https://github.com/watawata14341"><img src="https://img.icons8.com/metro/100/000000/github.png"></a>
