--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
         <br>
         <a href="https://icons8.com/icon/436/ツイッター">by icons8</a>
     </div>
+    <input type="button" onclick="chBackcolor('red');">
 
     <script src="snap.svg-min.js"></script>
     <script src="vivus.min.js"></script>
     <script src="drawLine.js"></script>
+    <script src="background.js"></script>
     
   </body>
 </html>
