--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Wataame website</title>
     <link href="basic.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
+    <!--<script type="text/javascript" src="jquery-3.4.1.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
-  <body>
+  <body id="back">
     <div class="anime">
         　<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="svg-animation" version="1.1" viewBox="0 0 1280 800" xml:space="preserve" width="1280" height="800">
             <image xmlns:xlink="http://www.w3.org/2000/xlink" xlink:href="test2.svg" width="1280" height="800" mask="url(#clipmask)"></image>
@@ -66,12 +67,11 @@
         <br>
         <a href="https://icons8.com/icon/436/ツイッター">by icons8</a>
     </div>
-    <input type="button" onclick="chBackcolor('red');">
+    <input type="button" onclick="ChangeBack()">
 
     <script src="snap.svg-min.js"></script>
     <script src="vivus.min.js"></script>
     <script src="drawLine.js"></script>
     <script src="background.js"></script>
-    
   </body>
 </html>
