--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--<script type="text/javascript" src="jquery-3.4.1.min.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
-  <body id="back">
+  <body>
     <div class="anime">
         　<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="svg-animation" version="1.1" viewBox="0 0 1280 800" xml:space="preserve" width="1280" height="800">
             <image xmlns:xlink="http://www.w3.org/2000/xlink" xlink:href="test2.svg" width="1280" height="800" mask="url(#clipmask)"></image>
