--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <header class="main">
       <h1>Wataame website</h1>
     </header>
+    <section class="main fixed bg1">
+          <div class="flake1"></div>
+    </section>
     <div class="main div-left-b">
       <p>Profile</p>
     </div>
