--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Wataame website</title>
     <link href="basic.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
-    <!--<script type="text/javascript" src="jquery-3.4.1.min.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
@@ -31,6 +30,14 @@
     </header>
     <section class="main bg">
           <div class="snow1"></div>
+          <div class="snow2"></div>
+          <div class="snow3"></div>
+          <div class="snow4"></div>
+          <div class="snow5"></div>
+          <div class="snow6"></div>
+          <div class="snow7"></div>
+          <div class="snow8"></div>
+          <div class="snow9"></div>
     </section>
     <div class="main div-left-b">
       <p>Profile</p>
@@ -70,7 +77,7 @@
         <br>
         <a href="https://icons8.com/icon/436/ツイッター">by icons8</a>
     </div>
-    <input type="button" onclick="ChangeBack()">
+    <input class="main" type="button" onclick="ChangeBack()">
 
     <script src="snap.svg-min.js"></script>
     <script src="vivus.min.js"></script>
