--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </mask>
     </svg>
   </div>
-  
+
   <button type="button" id="js-buttonHamburger" class="c-button p-hamburger" aria-controls="global-nav" aria-expanded="false">
     <span class="p-hamburger__line">
       <span class="u-visuallyHidden">
@@ -101,6 +101,7 @@
   <script src="vivus.min.js"></script>
   <script src="drawLine.js"></script>
   <script src="background.js"></script>
+  <script src="hamburger.js"></script>
 </body>
 
 </html>
