--- a/index.html
+++ b/index.html
@@ -40,10 +40,22 @@
   <button type="button" id="js-buttonHamburger" class="c-button p-hamburger" aria-controls="global-nav" aria-expanded="false">
     <span class="p-hamburger__line">
       <span class="u-visuallyHidden">
-        メニューを開閉する
       </span>
     </span>
   </button>
+  <div class="p-drawer">
+    <div>
+      <a href="index.html">
+        "home"
+      </a>
+      <a href="practice.html">
+        "practice"
+      </a>
+      <a href="contact.html">
+        "contact"
+      </a>
+    </div>
+  </div>
 
   <section class="main bg">
     <div class="snow1"></div>
