--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </span>
     </span>
   </button>
-  <div class="p-drawer">
-    <div>
+  <div class="drawer-out">
+    <div class="links">
       <a href="index.html">
         "home"
       </a>
