--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
   </button>
   <div class="drawer-out">
     <div class="links">
-      <a href="index.html">
-        "home"
+      <a href="index.html" class=links1>
+        home
       </a>
+      <br>
       <a href="practice.html">
-        "practice"
+        practice
       </a>
+      <br>
       <a href="contact.html">
-        "contact"
+        contact
       </a>
+      <br>
     </div>
   </div>
 
