--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Wataame website</title>
   <link href="basic.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
@@ -45,18 +46,15 @@
   </button>
   <div class="drawer-out">
     <div class="links">
-      <a href="index.html" class=links1>
+      <a href="index.html" class="link">
         home
       </a>
-      <br>
-      <a href="practice.html">
+      <a href="practice.html" class="link">
         practice
       </a>
-      <br>
-      <a href="contact.html">
+      <a href="contact.html" class="link">
         contact
       </a>
-      <br>
     </div>
   </div>
 
