--- a/index.html
+++ b/index.html
@@ -105,13 +105,20 @@
   </div>
   <br>
 
+  <!---
   <div class="main icons">
     <a href="https://github.com/watawata14341"><img src="https://img.icons8.com/metro/100/000000/github.png"></a>
     <a href="https://twitter.com/wataame_815"><img src="https://img.icons8.com/metro/100/000000/twitter.png"></a>
     <br>
     <a href="https://icons8.com/icon/436/ツイッター">by icons8</a>
   </div>
+  -->
+  
   <input class="main" type="button" onclick="ChangeBack()">
+
+  <footer class="main">
+    <p>© 2020 Akihiko Watanuki. All rights reserved.</p>
+  </footer>
 
   <script src="snap.svg-min.js"></script>
   <script src="vivus.min.js"></script>
