--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
   <title>Wataame website</title>
-  <link href="basic.css" rel="stylesheet" type="text/css">
+  <link href="index.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -38,7 +38,7 @@
     </svg>
   </div>
 
-  <button type="button" id="js-buttonHamburger" class="c-button p-hamburger" aria-controls="global-nav" aria-expanded="false">
+  <button type="button" id="js-buttonHamburger" class="main c-button p-hamburger" aria-controls="global-nav" aria-expanded="false">
     <span class="p-hamburger__line">
       <span class="u-visuallyHidden">
       </span>
