--- a/practice.html
+++ b/practice.html
@@ -1,83 +1,60 @@
 <html>
 
 <head>
-  <meta charset='utf-8'>
-  <title>Wataame website</title>
-  <link href="basic.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <meta charset='utf-8'>
+    <title>Wataame website</title>
+    <link href="practice.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
-  <div class="anime">
-    <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="svg-animation" version="1.1"
-      viewBox="0 0 1280 800" xml:space="preserve" width="1280" height="800">
-      <image xmlns:xlink="http://www.w3.org/2000/xlink" xlink:href="test2.svg" width="1280" height="800"
-        mask="url(#clipmask)"></image>
-      <mask id="clipmask" maskUnits="objectBoundingBox">
-        <!--<path class = "st0" d=" M 1279 1 L 852.1 264 L 852.1 264 L 852.1 264"/>-->
-        <path class="st0"
-          d=" M 234.3 358.2 L 218.7 371.7 L 192 382.8 L 167.7 384.6 L 153 371.7 L 153 351.3 L 164.1 331.2 L 182.7 309 L 204 288.3 L 235.2 267.9 L 261.9 255.6 L 287 244 L 310.8 244 L 325 258.15 L 314.4 279.6 L 303.15 300 L 293.4 321.75 L 281 340.5 L 266 361.8 L 249.3 385.8 L 230 412.5 L 218.7 435 L 210.75 449.4 L 230 441 L 241 423.6 L 258.3 402.9 L 281 376.35 L 301 353 L 339 321.75 L 360.6 300 L 376.2 292 L 387.45 288.3 L 368 314.7 L 347.1 348 L 334 379.05 L 325 417 L 330.9 443.1 L 355 449.4 L 376.2 441 L 397.5 429.3 L 425 404.1 L 447 379.95 L 466.65 348 L 484.2 317.4 L 491.4 285.6 L 483.75 260.1 L 474.15 255.6 L 480 267 Q 500.494 271.315 510.3 264.3" />
-        <path class="st0"
-          d=" M 576.6 340.8 L 570 335.7 L 553 336.3 L 535 345 L 518 357.6 L 501 373.8 L 489.3 392 L 483.75 406.5 L 484.8 422.1 L 495 429.9 L 507.3 427.5 L 525.6 412.5 L 543 396.3 L 555.3 381 L 567 364.8 L 578.1 349.2 L 585 345 L 582 353 L 572 368.25 L 561.3 384.9 L 553 398.7 L 549 413.1 L 553 423.6 L 563.4 426.6 L 576 420.6 L 587 411.6 L 597 402.9 L 605 392 L 611.4 385.8 L 611.4 385.8" />
-        <path class="st0"
-          d=" M 619.8 339.9 L 628.2 339.6 L 637 339.6 L 645.6 339.6 L 656 339.6 L 666.6 339.6 L 679 339.6 L 691 339.15 L 705.3 336.3 L 714 336.3 L 720 335.7 L 720 335.7" />
-        <path class="st0"
-          d=" M 666.6 314.7 L 656 324 L 645.6 336.3 L 637 346.8 L 628.2 359.25 L 621 371.7 L 614 385.8 L 609 398.7 L 606.75 414.6 L 612.3 426 L 625 429.9 L 639.6 427.5 L 656 420.6 L 670.8 412.5 L 683 404.1 L 693 394 L 702 384.9 L 702 384.9" />
-        <path class="st0"
-          d=" M 789.3 340.8 L 780.9 334.5 L 768.9 336.3 L 755.7 340.5 L 744 348 L 735 355.5 L 725.4 363.9 L 716 375.6 L 705.3 385.8 L 699.6 399.9 L 697.5 410.85 L 699.6 422.1 L 706.2 428.7 L 716 428.7 L 730 418.8 L 743 408.6 L 755.7 394 L 766 382.8 L 776.1 368.85 L 786.6 354.6 L 791.7 345.6 L 797 345.6 L 791.7 354.6 L 786.6 363.9 L 780.9 372.75 L 772 384.9 L 766 396.6 L 762 406.5 L 764 418.5 L 772 426 L 786.6 423.3 L 795.9 416.4 L 805.2 406.5 L 817 396 L 823 388.5 L 823 388.5" />
-        <path class="st0"
-          d=" M 912.9 340.5 L 907 336.3 L 895 335.7 L 879.3 339.9 L 867 348 L 858 354.6 L 848 363.75 L 839 371.7 L 831.9 381.3 L 825.6 390 L 821.1 404.1 L 821.1 416.4 L 825.6 426 L 836.25 429.3 L 846 426 L 858 417 L 872 402.9 L 886 386.4 L 895 375.6 L 902 364.8 L 910.2 354.6 L 917 346.8 L 922 347.4 L 917 356.25 L 907 368.25 L 899.7 377.4 L 892.5 390 L 888 400.2 L 888 413.1 L 892.5 426 L 902 426.6 L 915.3 418.8 L 924 409.8 L 936 399 L 948 384.9 L 958.8 373.8 L 965.85 363.9 L 972 354.6 L 981 342.3 L 987 338.4 L 987 338.4" />
-        <path class="st0"
-          d=" M 986 346.8 L 981 354.6 L 975 363.75 L 970 371.7 L 964 380.7 L 960.9 388.5 L 956.1 400.2 L 950.1 409.8 L 948 420.6 L 958.8 412.5 L 970 399 L 984 384.9 L 997.8 371.7 L 1009 361.2 L 1024 348.6 L 1039 339.6 L 1046.4 338.4 L 1042 349.2 L 1035.9 362.25 L 1029 372.75 L 1022 390 L 1016.4 404.55 L 1013 415.2 L 1010.1 423.3 L 1022 406.5 L 1034 389.4 L 1046.4 377.85 L 1065 359.25 L 1080 350.7 L 1098 341.4 L 1104 341.4 L 1095.9 354.6 L 1088 366.6 L 1080 379.05 L 1071.9 396.6 L 1070 409.8 L 1070 420.6 L 1078 423.6 L 1088 423 L 1102 417 L 1109.25 413.1 L 1117 406.5 L 1122 400.2 L 1122 400.2" />
-        <path class="st0"
-          d=" M 1131 386.4 L 1137.9 390 L 1149 392 L 1164 388.8 L 1174 382.8 L 1186.2 376.35 L 1195 366.6 L 1203.75 356.25 L 1203.75 346.8 L 1199 339.9 L 1186.2 340.8 L 1174 348 L 1164 354.6 L 1154 363.75 L 1143.6 375.6 L 1136 384.6 L 1129 400.2 L 1126 415.5 L 1129 426 L 1140.9 431.4 L 1158 429.3 L 1174 422.1 L 1190 408.6 L 1202 398.7 L 1214 385.8 L 1221.6 376.35 L 1221.6 376.35" />
-        <!--<path class = "st0" d=" M 506.5 488.7 L 4 799 L 4 799"/>-->
-      </mask>
-    </svg>
-  </div>
-
-  <button type="button" id="js-buttonHamburger" class="c-button p-hamburger" aria-controls="global-nav" aria-expanded="false">
-    <span class="p-hamburger__line">
-      <span class="u-visuallyHidden">
-      </span>
-    </span>
-  </button>
-  <div class="drawer-out">
-    <div class="links">
-      <a href="index.html" class="link">
-        home
-      </a>
-      <br>
-      <a href="practice.html" class="link">
-        practice
-      </a>
-      <br>
-      <a href="contact.html" class="link">
-        contact
-      </a>
-      <br>
+    <button type="button" id="js-buttonHamburger" class="c-button p-hamburger" aria-controls="global-nav"
+        aria-expanded="false">
+        <span class="p-hamburger__line">
+            <span class="u-visuallyHidden">
+            </span>
+        </span>
+    </button>
+    <div class="drawer-out">
+        <div class="links">
+            <a href="index.html" class="link">
+                home
+            </a>
+            <br>
+            <a href="practice.html" class="link">
+                practice
+            </a>
+            <br>
+            <a href="contact.html" class="link">
+                contact
+            </a>
+            <br>
+        </div>
     </div>
-  </div>
 
-  <section class="main bg">
-    <div class="snow1"></div>
-    <div class="snow2"></div>
-    <div class="snow3"></div>
-    <div class="snow4"></div>
-    <div class="snow5"></div>
-    <div class="snow6"></div>
-    <div class="snow7"></div>
-    <div class="snow8"></div>
-    <div class="snow9"></div>
-  </section>
+    <section class="bg">
+        <div class="snow1"></div>
+        <div class="snow2"></div>
+        <div class="snow3"></div>
+        <div class="snow4"></div>
+        <div class="snow5"></div>
+        <div class="snow6"></div>
+        <div class="snow7"></div>
+        <div class="snow8"></div>
+        <div class="snow9"></div>
+    </section>
 
-  <script src="snap.svg-min.js"></script>
-  <script src="vivus.min.js"></script>
-  <script src="drawLine.js"></script>
-  <script src="background.js"></script>
-  <script src="hamburger.js"></script>
+    <footer>
+        <p>© 2020 Akihiko Watanuki. All rights reserved.</p>
+    </footer>
+
+    <script src="snap.svg-min.js"></script>
+    <script src="vivus.min.js"></script>
+    <script src="drawLine.js"></script>
+    <script src="background.js"></script>
+    <script src="hamburger.js"></script>
 </body>
 
 </html>
