--- a/contact.html
+++ b/contact.html
@@ -46,10 +46,18 @@
         <div class="snow9"></div>
     </section>
 
+    <div class="main-block">
+        <p>写真</p>
+        <p>綿貫　彬彦</p>
+        <p>Email:akki.ni.ni.32@gmail.com</p>
+        <p>Address: Kofu, Yamanashi, Japan</p>
+        <p>twitter:github</p>
+    </div>
+
     <footer>
         <p>© 2020 Akihiko Watanuki. All rights reserved.</p>
     </footer>
-    
+
     <script src="hamburger.js"></script>
 </body>
 
