--- a/practice.html
+++ b/practice.html
@@ -46,6 +46,14 @@
         <div class="snow9"></div>
     </section>
 
+    <div id="main">
+        <div class="wrapper">
+            <div class="con1">
+                <p>何か作成したものを上げていきます。</p>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p>© 2020 Akihiko Watanuki. All rights reserved.</p>
     </footer>
