--- a/index.html
+++ b/index.html
@@ -38,30 +38,7 @@
     </svg>
   </div>
 
-  <button type="button" id="js-buttonHamburger" class="main c-button p-hamburger" aria-controls="global-nav" aria-expanded="false">
-    <span class="p-hamburger__line">
-      <span class="u-visuallyHidden">
-      </span>
-    </span>
-  </button>
-  <div class="drawer-out">
-    <div class="links">
-      <a href="index.html" class="link">
-        home
-      </a>
-      <br>
-      <a href="practice.html" class="link">
-        practice
-      </a>
-      <br>
-      <a href="contact.html" class="link">
-        contact
-      </a>
-      <br>
-    </div>
-  </div>
-
-  <section class="main bg">
+  <section class="bg">
     <div class="snow1"></div>
     <div class="snow2"></div>
     <div class="snow3"></div>
@@ -73,58 +50,75 @@
     <div class="snow9"></div>
   </section>
 
-  <div class="main div-left-b">
-    <p>Profile</p>
-  </div>
-  <div class="main div-right-w">
-    <p>
-      山梨大学工学部<br>
-      コンピュータ理工学科４年<br>
-      綿貫　彬彦<br>
-    </p>
-  </div>
-  <br>
-  <div class="main div-left-w">
-    <p>
-      映画鑑賞、ゲーム、旅行
-    </p>
-  </div>
-  <div class="main div-right-b">
-    <p>Hobby</p>
-  </div>
-  <br>
-  <div class="main div-left-b">
-    <p>Ambition</p>
-  </div>
-  <div class="main div-right-w">
-    <p>
-      競技プログラミング頑張る<br>
-    </p>
-  </div>
-  <div>改変中
-  </div>
-  <br>
+  <div class="main">
+    <button type="button" id="js-buttonHamburger" class="c-button p-hamburger" aria-controls="global-nav"
+      aria-expanded="false">
+      <span class="p-hamburger__line">
+        <span class="u-visuallyHidden">
+        </span>
+      </span>
+    </button>
+    <div class="drawer-out">
+      <div class="links">
+        <a href="index.html" class="link">
+          home
+        </a>
+        <br>
+        <a href="practice.html" class="link">
+          practice
+        </a>
+        <br>
+        <a href="contact.html" class="link">
+          contact
+        </a>
+        <br>
+      </div>
+    </div>
 
-  <!---
-  <div class="main icons">
-    <a href="https://github.com/watawata14341"><img src="https://img.icons8.com/metro/100/000000/github.png"></a>
-    <a href="https://twitter.com/wataame_815"><img src="https://img.icons8.com/metro/100/000000/twitter.png"></a>
+    <div class="div-left-b">
+      <p>Profile</p>
+    </div>
+    <div class="div-right-w">
+      <p>
+        山梨大学工学部<br>
+        コンピュータ理工学科４年<br>
+        綿貫　彬彦<br>
+      </p>
+    </div>
     <br>
-    <a href="https://icons8.com/icon/436/ツイッター">by icons8</a>
+    <div class="div-left-w">
+      <p>
+        映画鑑賞、ゲーム、旅行
+      </p>
+    </div>
+    <div class="div-right-b">
+      <p>Hobby</p>
+    </div>
+    <br>
+    <div class="div-left-b">
+      <p>Ambition</p>
+    </div>
+    <div class="div-right-w">
+      <p>
+        競技プログラミング頑張る<br>
+      </p>
+    </div>
+    <div>改変中
+    </div>
+    <br>
+
+    <input type="button" onclick="ChangeBack()">
+
+    <footer>
+      <p>© 2020 Akihiko Watanuki. All rights reserved.</p>
+    </footer>
+
+    <script src="snap.svg-min.js"></script>
+    <script src="vivus.min.js"></script>
+    <script src="drawLine.js"></script>
+    <script src="background.js"></script>
+    <script src="hamburger.js"></script>
   </div>
-  -->
-  
-  <input class="main" type="button" onclick="ChangeBack()">
-
-  <footer class="main">
-    <p>© 2020 Akihiko Watanuki. All rights reserved.</p>
-  </footer>
-
-  <script src="snap.svg-min.js"></script>
-  <script src="vivus.min.js"></script>
-  <script src="drawLine.js"></script>
-  <script src="background.js"></script>
-  <script src="hamburger.js"></script>
 </body>
 
 </html>
