--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Wataame website</title>
   <link href="index.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Raleway:ital,wght@1,800&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
@@ -75,39 +75,25 @@
       </div>
     </div>
 
-    <div class="div-left-b">
-      <p>Profile</p>
+    <div class="wrapper">
+      <div class="prof-wrap">
+        <div class="prof-name">
+          <p>Akihiko Watanuki</p>
+        </div>
+        <div class="prof-hob">
+          <p>Hobby : 映画, 旅行, ゲーム</p>
+        </div>
+        <div class="prof-his">
+          <p>history : 2014. 群馬高専 電子情報工学科</p>
+          <p>          2019. 山梨大学 コンピュータ理工学科</p>
+          <p>          2021. 山梨大学大学院 コンピュータ理工学専攻</p>
+        </div>
+        <div class="prof-amb">
+          <p>長期インターン等を通して成長したい</p>
+        </div>
+      </div>
+      <input type="button" onclick="ChangeBack()">
     </div>
-    <div class="div-right-w">
-      <p>
-        山梨大学工学部<br>
-        コンピュータ理工学科４年<br>
-        綿貫　彬彦<br>
-      </p>
-    </div>
-    <br>
-    <div class="div-left-w">
-      <p>
-        映画鑑賞、ゲーム、旅行
-      </p>
-    </div>
-    <div class="div-right-b">
-      <p>Hobby</p>
-    </div>
-    <br>
-    <div class="div-left-b">
-      <p>Ambition</p>
-    </div>
-    <div class="div-right-w">
-      <p>
-        競技プログラミング頑張る<br>
-      </p>
-    </div>
-    <div>改変中
-    </div>
-    <br>
-
-    <input type="button" onclick="ChangeBack()">
 
     <footer>
       <p>© 2020 Akihiko Watanuki. All rights reserved.</p>
