--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset='utf-8'>
   <title>Wataame website</title>
   <link href="index.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Raleway:ital,wght@1,800&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
