--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <title>Wataame website</title>
     <link href="contact.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
