--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
 
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
   <meta charset='utf-8'>
-  <title>Wataame website</title>
+  <meta name="robots" content="noindex,nofollow" />
+  <title>Watanuki website</title>
+  <meta property="og:url" content="watawata14341.github.io" />
+  <meta property="og:title" content="Watanuki website" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="image/image-icon.jpg" />
+
   <link href="index.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
