--- a/index.html
+++ b/index.html
@@ -90,10 +90,15 @@
         <div class="prof-hob">
           <p>Hobby : 映画, 旅行, ゲーム</p>
         </div>
-        <div class="prof-his">
-          <p>history : 2014. 群馬高専 電子情報工学科</p>
-          <p>          2019. 山梨大学 コンピュータ理工学科</p>
-          <p>          2021. 山梨大学大学院 コンピュータ理工学専攻</p>
+        <div class="prof-his-left">
+          <p>history : </p>
+        </div>
+        <div class="prof-his-mid">
+        </div>
+        <div class="prof-his-right">
+          <p>2014. 群馬高専 電子情報工学科</p>
+          <p>2019. 山梨大学 コンピュータ理工学科</p>
+          <p>2021. 山梨大学大学院 コンピュータ理工学専攻</p>
         </div>
         <div class="prof-amb">
           <p>長期インターン等を通して成長したい</p>
