--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <link href="index.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Raleway:ital,wght@1,800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Raleway:ital,wght@1,800&display=swap"
+    rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
@@ -90,15 +91,17 @@
         <div class="prof-hob">
           <p>Hobby : 映画, 旅行, ゲーム</p>
         </div>
-        <div class="prof-his-left">
-          <p>history : </p>
-        </div>
-        <div class="prof-his-mid">
-        </div>
-        <div class="prof-his-right">
-          <p>2014. 群馬高専 電子情報工学科</p>
-          <p>2019. 山梨大学 コンピュータ理工学科</p>
-          <p>2021. 山梨大学大学院 コンピュータ理工学専攻</p>
+        <div class="prof-his">
+          <div class="prof-his-left">
+            <p>history : </p>
+          </div>
+          <div class="prof-his-mid">
+          </div>
+          <div class="prof-his-right">
+            <p>2014. 群馬高専 電子情報工学科</p>
+            <p>2019. 山梨大学 コンピュータ理工学科</p>
+            <p>2021. 山梨大学大学院 コンピュータ理工学専攻</p>
+          </div>
         </div>
         <div class="prof-amb">
           <p>長期インターン等を通して成長したい</p>
