--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
   </section>
 
   <div class="main">
+    <header>
+      <a href="/React-demo/">こちら</a>
+    </header>
     <button type="button" id="js-buttonHamburger" class="c-button p-hamburger" aria-controls="global-nav"
       aria-expanded="false">
       <span class="p-hamburger__line">
