--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,12 @@
         <div class="snow9"></div>
     </section>
 
+    <header>
+        <p>こちらのサイトはHTML,CSS,jQueryなどで作成した旧サイトとなります。</p>
+        <p>↓Reactで作成した新サイト↓</p>
+        <a href="/React-demo/">こちら</a>
+      </header>
+
     <div id="main">
         <div class="img-block">
             <img class="img-icon" src="image/image-icon.jpg" alt="プロフィール画像">
