--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
   <div class="main">
     <header>
+      <p>こちらのサイトはHTML,CSS,jQueryなどで作成した旧サイトとなります。</p>
+      <p>↓Reactで作成した新サイト↓</p>
       <a href="/React-demo/">こちら</a>
     </header>
     <button type="button" id="js-buttonHamburger" class="c-button p-hamburger" aria-controls="global-nav"
