--- a/practice.html
+++ b/practice.html
@@ -52,6 +52,12 @@
         <div class="snow9"></div>
     </section>
 
+    <header>
+        <p>こちらのサイトはHTML,CSS,jQueryなどで作成した旧サイトとなります。</p>
+        <p>↓Reactで作成した新サイト↓</p>
+        <a href="/React-demo/">こちら</a>
+    </header>
+
     <div id="main">
         <div class="wrapper">
             <div class="con1">
