--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     <header>
         <p>こちらのサイトはHTML,CSS,jQueryなどで作成した旧サイトとなります。</p>
         <p>↓Reactで作成した新サイト↓</p>
-        <a href="/React-demo/">こちら</a>
+        <a href="/React-pages/">こちら</a>
       </header>
 
     <div id="main">
