--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <header>
       <p>こちらのサイトはHTML,CSS,jQueryなどで作成した旧サイトとなります。</p>
       <p>↓Reactで作成した新サイト↓</p>
-      <a href="/React-demo/">こちら</a>
+      <a href="/React-pages/">こちら</a>
     </header>
     <button type="button" id="js-buttonHamburger" class="c-button p-hamburger" aria-controls="global-nav"
       aria-expanded="false">
